.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Outcome_Question__c.object
<CustomObject>
    <description>Junction object that supports many-to-many relationship between Outcomes and Questions.  Represents questions that are related to outcomes.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Activity_Outcome__c</fullName>
        <label>Activity Outcome</label>
        <referenceTo>Incap311__Outcome__c</referenceTo>
        <relationshipName>Activity_Outcome_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Data_Type__c</fullName>
        <formula>TEXT(Incap311__Question__r.Incap311__Data_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Answer__c</fullName>
        <label>Default Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Dependencies__c</fullName>
        <label>Dependencies</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Display_Sort_Order__c</fullName>
        <formula>IF(
   ISNULL(Incap311__Override_Order__c)|| ISblank(Incap311__Override_Order__c), 
    Incap311__Question__r.Incap311__Order__c ,
   Incap311__Override_Order__c 
)</formula>
        <label>Display Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Flex_Question_Code__c</fullName>
        <formula>Incap311__Question__r.Incap311__Flex_Question_Code__c</formula>
        <label>Flex Question Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Force_Upper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Upper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Controlling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Controlling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Dependent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dependent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Required_Question__c</fullName>
        <formula>IF(
   OR(
      Incap311__Question__r.Incap311__Required__c,
      Incap311__Is_Required__c
   ),
   TRUE,
   FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Required Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Lower_Limit__c</fullName>
        <label>Lower Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Order2__c</fullName>
        <description>Overrides order value provided by the related flex question</description>
        <formula>IF( 
   ISNULL(Incap311__Override_Order__c),  
   Incap311__Question__r.Incap311__Order__c,   
   Incap311__Override_Order__c 
)</formula>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Order__c</fullName>
        <label>DEPRECATED - Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Code__c</fullName>
        <formula>Incap311__Activity_Outcome__r.Incap311__Outcome_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Outcome_Junction_Count__c</fullName>
        <formula>Incap311__Activity_Outcome__r.Incap311__Outcome_Junction_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outcome Junction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Answer_Values__c</fullName>
        <label>Override Answer Values</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Order__c</fullName>
        <label>Override Order</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Start_Date__c</fullName>
        <label>Override Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Override_Stop_Date__c</fullName>
        <label>Override Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Question_Code__c</fullName>
        <formula>Incap311__Question__r.Incap311__Flex_Question_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Question_Text__c</fullName>
        <formula>Incap311__Question__r.Incap311__Question_Alias__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Question__c</fullName>
        <label>Question</label>
        <referenceTo>Incap311__Question__c</referenceTo>
        <relationshipName>Activity_Outcome_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Incap311__Service_Type_Version_Activity_Outcome__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Type Version Activity Outcome</label>
        <referenceTo>Incap311__Activity_Outcome__c</referenceTo>
        <relationshipLabel>Outcome Questions</relationshipLabel>
        <relationshipName>Outcome_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incap311__Start_Date__c</fullName>
        <formula>IF(
 ISNULL( Incap311__Override_Start_Date__c ),
 Incap311__Question__r.Incap311__Start_Date__c,
 Incap311__Override_Start_Date__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Stop_Date__c</fullName>
        <formula>IF(
  ISNULL(Incap311__Override_Stop_Date__c),
  Incap311__Question__r.Incap311__Stop_Date__c,
  Incap311__Override_Stop_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Upper_Limit__c</fullName>
        <label>Upper Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Used_By_Interface_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used By Interface Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Validations__c</fullName>
        <label>Validations</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Outcome Question</label>
    <nameField>
        <displayFormat>AOQ-{0000}</displayFormat>
        <label>Activity Outcome Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>